--- a/plus/changecountrecord.html
+++ b/plus/changecountrecord.html
@@ -88,7 +88,6 @@
 			// 查询历史产量数据
 			function searchData() {
 				count = 0;
-				pricecount = 0;
 				var xhr = new plus.net.XMLHttpRequest();
 				xhr.onreadystatechange = function() {
 					if(xhr.readyState == 4) {
@@ -96,20 +95,18 @@
 							reponse = JSON.parse(xhr.responseText);
 							reponse.forEach(function(result) {
 								domItem = document.createElement('ul');
-								domItem.innerHTML = '<li>数量：<span>' + result.Quantity + '</span></li><li>金额：<span>' + result.Amount + '</span></li><li>时间：<span>' + result.CDate + '</span></li>';
+								domItem.innerHTML = '<li><span class="titleTxt">制单号：</span><span>' + result.Orderno + '</span></li><li><span class="titleTxt">颜色：</span><span>' + result.Color + '</span></li><li><span class="titleTxt">工序：</span><span>' + result.SeqNo + '</span></li><li><span class="titleTxt">数量：</span><span>' + result.Quantity + '</span></li><li><span class="titleTxt">修改数量：</span><span>' + result.EditQty + '</span></li><li><span class="titleTxt">扎号：</span><span>' + result.GroupNo + '</span></li><li><span class="titleTxt">床次：</span><span>' + result.BedNo + '</span></li><li><span class="titleTxt">尺码：</span><span>' + result.ProdSize + '</span></li><li><span class="titleTxt">修改时间：</span><span>' + result.BTime.slice(0, 16) + '</span></li>';
 								document.getElementById('resultList').appendChild(domItem);
-								count += Number(result.Quantity);
-								pricecount += Number(result.Amount);
+								count += Number(result.EditQty);
 							});
 							document.getElementById("count").innerText = count;
-							document.getElementById("pricecount").innerText = pricecount;
 						} else {
 							console.log(xhr.response);
 							console.log(xhr.responseText);
 						}
 					}
 				}
-				xhr.open("GET", "http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/getTicketSum?user=" + user.EmployeeNo +"&sdate=" + sday + "&edate=" + eday);
+				xhr.open("GET", "http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/getEditCutGrpQty?user=" + user.EmployeeNo +"&sdate=" + sday + "&edate=" + eday);
 				xhr.send();
 			}
 			// 点击选择开始日期
@@ -225,10 +222,7 @@
 			</div>
 			<div class="collect">
 				<div>
-					总件数：<span id="count"></span>
-				</div>
-				<div>
-					总金额：<span id="pricecount"></span>
+					修改总件数：<span id="count"></span>
 				</div>
 			</div>
 		</div>
