--- a/plus/pastoutputdetail.html
+++ b/plus/pastoutputdetail.html
@@ -95,7 +95,7 @@
 							reponse = JSON.parse(xhr.responseText);
 							reponse.forEach(function(result) {
 								domItem = document.createElement('ul');
-								domItem.innerHTML = '<li>制单号：<span>' + result.Orderno + '</span></li><li>床次：<span>' + result.BedNo + '</span></li><li>工序号：<span>' + result.SeqNo + '</span></li><li>工序名称：<span>' + result.SeqName + '</span></li><li>扎号：<span>' + result.GroupNo + '</span></li><li>尺码：<span>' + result.ProdSize + '</span></li><li>颜色：<span>' + result.Color + '</span></li><li>数量：<span>' + result.Quantity + '</span></li><li>单价：<span>' + result.Price + '</span></li><li>金额：<span>' + result.Amount + '</span></li><li>回收时间：<span>' + result.BTime.slice(0, 16) + '</span></li>';
+								domItem.innerHTML = '<li><span class="titleTxt">制单号：</span><span>' + result.Orderno + '</span></li><li><span class="titleTxt">床次：</span><span>' + result.BedNo + '</span></li><li><span class="titleTxt">工序号：</span><span>' + result.SeqNo + '</span></li><li><span class="titleTxt">工序名称：</span><span>' + result.SeqName + '</span></li><li><span class="titleTxt">扎号：</span><span>' + result.GroupNo + '</span></li><li><span class="titleTxt">尺码：</span><span>' + result.ProdSize + '</span></li><li><span class="titleTxt">颜色：</span><span>' + result.Color + '</span></li><li><span class="titleTxt">数量：</span><span>' + result.Quantity + '</span></li><li><span class="titleTxt">单价：</span><span>' + result.Price + '</span></li><li><span class="titleTxt">金额：</span><span>' + result.Amount + '</span></li><li><span class="titleTxt">回收时间：</span><span>' + result.BTime.slice(0, 16) + '</span></li>';
 								document.getElementById('resultList').appendChild(domItem);
 								count += Number(result.Quantity);
 								pricecount += Number(result.Amount);
